# cyberbench

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/cyberbench/: __init__.py  cli.py  report.py  runner.py  tasks.py
src/cyberbench/backends/: __init__.py  anthropic_backend.py  base.py  echo.py  ollama.py  openai_backend.py
src/cyberbench/scorers/: __init__.py  mc_exact.py  rubric_keyword.py  sigma_structural.py
tasks/code_review/: code-001-sql-concat.yaml  code-002-shell-injection.yaml  code-003-path-traversal.yaml  code-004-xss.yaml  code-005-weak-hash.yaml
tasks/cve_triage/: cve-001-log4shell.yaml  cve-002-shellshock.yaml  cve-003-heartbleed.yaml  cve-004-eternalblue.yaml  cve-005-sqli-concat.yaml
tasks/detection_rule/: sigma-001-psexec.yaml  sigma-002-mimikatz.yaml  sigma-003-powershell-encoded.yaml  sigma-004-office-spawns-shell.yaml  sigma-005-ssh-brute-force.yaml
tests/: test_report.py  test_runner.py  test_scorers.py  test_tasks.py
