[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cyberbench"
version = "0.1.0"
description = "Open, reproducible benchmark for evaluating LLMs on cybersecurity reasoning."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Joe Munene" }]
keywords = ["llm", "benchmark", "security", "cybersecurity", "evaluation", "cve", "sigma"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pyyaml>=6.0",
    "httpx>=0.27",
    "rich>=13.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.40"]
all = ["openai>=1.0", "anthropic>=0.40"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.5"]

[project.scripts]
cyberbench = "cyberbench.cli:main"

[project.urls]
Homepage = "https://github.com/joemunene-by/cyberbench"
Issues = "https://github.com/joemunene-by/cyberbench/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/cyberbench"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
